<resources>
    <string name="app_name">BoyaTrip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="IglesiaTrinidad">Iglesia de la trinidad</string>
    <string name="IconLocalization">Duitama</string>
    <string name="Calification">Calificación</string>
    <string name="ValueCalification">4.0</string>
    <string name="title_description">Descripción</string>
    <string name="text_description">Fue construida en 1.870 por orden del Marqués de Surba y Bonza, con un estilo colonial. Es la más antigua del municipio. La parroquia La Trinidad de Duitama, fue constituida el 1 de Enero de 1.971 según decreto N° 01/71 por el Excelentísimo Señor Obispo Julio Franco Arango. Su primer párroco fue el Reverendo Padre: Luis Levi Leguizamón López.</string>
    <string name="title_localization">Localización</string>
    <string name="registro">Registro de un lugar</string>
    <string name="registrar">registrar</string>
    <string name="estatura">Estatura</string>
    <string name="info">"Nombre: %s, Estatura: %f"</string>
    <string name="catedral">Catedral de Duitama</string>
    <string name="Puntuacion">Puntuacion: 4.0</string>
    <string name="DespricionPO1">Descripcion breve del sitio turistico en cuestion y de como llegar a el</string>

    <!-- Sync Preferences -->

    <string name="notifications">Notificaciones</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_list">Lista</string>
    <string name="title_datail">Detalle</string>
    <string name="title_preference">Preferencias</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">soporte@boyatrip.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="preferences">Preferencias</string>
    <string name="Boyatrip_title_nav_drawer">Boyatrip</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


</resources>